算是，初步完成了这个工具吧